#3 Fix white bar at the bottom while on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -10,9 +10,6 @@ html {
 
 :root {
   --white: #FAF0CA;
-  position: fixed;
-  width: 100%;
-  height: 100%;
 }
 
 body {
@@ -37,8 +34,9 @@ h3{
 /*Positioning*/
 
 .page-wrapper {
-  position: relative;
+  position: fixed;
   width: 100%;
+  height: 100%;
   min-height: 100vh;
   margin: auto;
   overflow-x: hidden;
@@ -414,9 +412,3 @@ img {
     display: none;
   }
 }
-
-@media only screen and (max-device-width: 480px) {
-    html {
-      height: calc(100% + 60px);
-      min-height: calc(100% + 60px);
-    }
